[project]
name = "rl-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "stable-baselines3>=2.6.0",
]

[tool.ruff]
line-length = 128 

[tool.uv.workspace]
members = ["rl_demo"]
